assets/css/style.css
/* ... */
.button-glow {
  -webkit-animation: glowing 5000ms infinite;
          animation: glowing 5000ms infinite;
}

/* Hover.css Effects */
/* https://github.com/IanLunn/Hover/blob/master/css/hover.css */

/* Grow */
.hvr-grow {
  display: inline-block;
  vertical-align: middle;
  -webkit-transform: perspective(1px) translateZ(0);
  transform: perspective(1px) translateZ(0);
  -webkit-box-shadow: 0 0 1px rgba(0, 0, 0, 0);
          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
  -webkit-transition-duration: 0.3s;
  -o-transition-duration: 0.3s;
     transition-duration: 0.3s;
  -webkit-transition-property: transform;
  -webkit-transition-property: -webkit-transform;
  transition-property: -webkit-transform;
  -o-transition-property: transform;
  transition-property: transform;
  transition-property: transform, -webkit-transform;
}
.hvr-grow:hover,
.hvr-grow:focus,
.hvr-grow:active {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
      transform: scale(1.1);
}

/************************************************************* Main Body */

.body-content {
  background: black;
  overflow: auto;
}

/************************************************************* Index Page*/

.viewport-control {
  height: calc(100vh - 225px);
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.main-features {
  padding-top: 50px;
  text-align: center;
  -ms-flex-item-align: start;
      align-self: flex-start;
}

.main-features h1 {
  color: #fafafa;
}

.red-feature {
  color: rgb(228, 22, 22, 0.75);
}

.lower-screen {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

.main-pitch {
  text-align: center;
  background: transparent;
  color: #fafafa;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-item-align: start;
      align-self: start;
  padding-top: 35px;
  padding-bottom: 35px;
  padding-left: 25px;
  padding-right: 25px;
}

.lower-screen .row {
  width: 100%;
  margin: 0;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
}

.main-pitch h2 {
  font-size: 1.5rem;
  margin: 0;
}

.hero-image {
  background: url("/assets/images/hero-image.jpg") no-repeat center center;
  background-size: contain;
  padding: 0;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

/************************************************************* About Page*/

.about-page {
  color: #fafafa;
}

.about-heading {
  padding-top: 50px;
  text-align: left;
}

.about-heading h1 {
  font-size: 1.5em;
}

.about-section {
  padding-left: 30px;
  padding-right: 30px;
  padding-top: 30px;
  padding-bottom: 30px;
}

.about-title {
  text-align: center;
}

.about-image {
  background-color: #fafafa;
  border-radius: 50%;
}

.about-text {
}

/************************************************************* Footer */

.footer {
  /* 'Lava' render from Gimp Software (www.gimp.com) */
  background: url("/assets/images/full-banner.png") black no-repeat center
    center fixed;
  background-size: cover;
  height: 75px;
  padding: 0;
}

/* Radial gradient (centre transparent, outer black) */
/* https://www.quirksmode.org/css/images/position.html */
.footer-gradient {
  background: -o-radial-gradient(at bottom, transparent 0%, black 70%);
  background: radial-gradient(at bottom, transparent 0%, black 70%);
  padding: 0;
}

.footer .row {
  height: inherit;
  width: 100%;
  margin: 0;
}

.personal-logo {
}

.company-logo {
  padding: 0;
}

.socials {
  padding-left: 5px;
  padding-right: 5px;
}

.socials i {
  padding-left: 10px;
  padding-right: 10px;
  font-size: 1.6em;
  color: #fafafa;
}

.personal-logo i,
.personal-logo a {
  color: #fafafa;
}

.personal-logo i:hover,
.personal-logo a:hover {
  color: #fafafa;
  text-decoration: none;
}

.personal-logo,
.company-logo,
.socials {
  text-align: center;
  margin: auto;
  color: #fafafa;
}

.socials-pair-one,
.socials-pair-two {
  display: -webkit-inline-box;
  display: -ms-inline-flexbox;
  display: inline-flex;
}
/* ... */

